--- a/style.css
+++ b/style.css
@@ -10,5 +10,10 @@ body {
   text-transform: uppercase;
   border-top: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
-  background-color: rgba(0,0,0, 0.1)
+  background-color: rgba(0,0,0, 0.1);
+  margin: -4%
+}
+
+li {
+  margin: 10%;
 }
