--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #444444;
-  color: #dddddd;
+  background-color: #4444444;
+  color: #ddddddd;
   font-family: Ariel, Helvetica, sans-serif;
   margin: 10% 20%;
 }
