--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ body {
   border-top: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
   background-color: rgba(0,0,0, 0.1);
-  margin: -4%
 }
 
 li {
-  margin: 10%;
+  margin: 5%;
+  border-bottom: 1px solid;
+  
 }
