--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 p {
-  text-align: center
+  text-align: left;
 }
 
 h4 {
@@ -27,7 +27,7 @@ h6 {
 }
 
 h1 {
-  text-align: center;
+  text-align: left;
 }
 
 img {
